--- a/options/options.css
+++ b/options/options.css
@@ -1,6 +1,6 @@
  .optionsForm {
 	display: grid;
-	grid-template-columns: auto 1fr;
+	grid-template-columns: 2fr 3fr;
 	grid-auto-flow: row;
 	grid-gap: 10px;
 	line-height: 25px;
@@ -9,15 +9,14 @@
 .optionsForm > label {
 	grid-column: 1;
 	grid-row: auto;
-	font-size: 1.25rem;
+	font-size: 14px;
 	text-shadow: 0 1px 1px #fefffe;
 	display : block;
 	float : left;
 	text-align : left;
 	padding-right : 1em;
 	height: 20px;
-	font-size: 20px;
-	padding: 10px 0;
+	padding: 10px 5px;
 }
 
 .optionsForm input {
@@ -48,14 +47,20 @@ button {
 }
 
 #jobAdder, #jobRemover {
-	width: 45%;
-	margin: 0 2.5%;
+	width: 47.5%;
 	height: 40px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 14px;
 	padding: 10px 0;
-	border: 1px solid black;
-	border-radius: 5px;
+	border: 1px solid #949494;
+}
+
+#jobAdder {
+	margin-right: 2.5%;
+}
+
+#jobRemover {
+	margin-left: 2.5%;
 }
 
 .jobinput {
